// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`
SELECT
  a
 1`] = `
Object {
  "distinct": false,
  "expressions": Array [
    "a",
  ],
  "from": undefined,
  "groupBy": undefined,
  "having": undefined,
  "highPriority": undefined,
  "limit": undefined,
  "orderBy": undefined,
  "sqlBigResult": undefined,
  "sqlBufferResult": undefined,
  "sqlCalcFoundRows": undefined,
  "sqlNoCache": undefined,
  "sqlSmallResult": undefined,
  "straightJoin": undefined,
  "type": "SelectStatement",
  "union": undefined,
  "where": undefined,
}
`;

exports[`ALTER TABLE table_name DROP COLUMN a 1`] = `
Object {
  "specifications": Array [
    Object {
      "columnName": "a",
      "type": "DropColumnSpecification",
    },
  ],
  "table": "table_name",
  "type": "AlterTableStatement",
}
`;

exports[`ALTER TABLE table_name DROP FOREIGN KEY fk_symbol 1`] = `
Object {
  "specifications": Array [
    Object {
      "key": "fk_symbol",
      "type": "DropForeignKeySpecification",
    },
  ],
  "table": "table_name",
  "type": "AlterTableStatement",
}
`;

exports[`ALTER TABLE table_name DROP INDEX index_name 1`] = `
Object {
  "specifications": Array [
    Object {
      "key": "index_name",
      "type": "DropKeySpecification",
    },
  ],
  "table": "table_name",
  "type": "AlterTableStatement",
}
`;

exports[`ALTER TABLE table_name DROP KEY index_name 1`] = `
Object {
  "specifications": Array [
    Object {
      "key": "index_name",
      "type": "DropKeySpecification",
    },
  ],
  "table": "table_name",
  "type": "AlterTableStatement",
}
`;

exports[`ALTER TABLE table_name DROP PRIMARY KEY 1`] = `
Object {
  "specifications": Array [
    Object {
      "type": "DropPrimaryKeySpecification",
    },
  ],
  "table": "table_name",
  "type": "AlterTableStatement",
}
`;

exports[`ALTER TABLE table_name DROP a 1`] = `
Object {
  "specifications": Array [
    Object {
      "columnName": "a",
      "type": "DropColumnSpecification",
    },
  ],
  "table": "table_name",
  "type": "AlterTableStatement",
}
`;

exports[`ALTER TABLE table_name RENAME AS new_table_name 1`] = `
Object {
  "specifications": Array [
    Object {
      "tableName": "new_table_name",
      "type": "AlterTableRenameTableSpecification",
    },
  ],
  "table": "table_name",
  "type": "AlterTableStatement",
}
`;

exports[`ALTER TABLE table_name RENAME COLUMN old_column TO new_column 1`] = `
Object {
  "specifications": Array [
    Object {
      "sourceColumnName": "old_column",
      "targetColumnName": "new_column",
      "type": "AlterTableRenameColumnSpecification",
    },
  ],
  "table": "table_name",
  "type": "AlterTableStatement",
}
`;

exports[`ALTER TABLE table_name RENAME INDEX old_key TO new_key 1`] = `
Object {
  "specifications": Array [
    Object {
      "sourceKey": "old_key",
      "targetKey": "new_key",
      "type": "AlterTableRenameKeySpecification",
    },
  ],
  "table": "table_name",
  "type": "AlterTableStatement",
}
`;

exports[`ALTER TABLE table_name RENAME KEY old_key TO new_key 1`] = `
Object {
  "specifications": Array [
    Object {
      "sourceKey": "old_key",
      "targetKey": "new_key",
      "type": "AlterTableRenameKeySpecification",
    },
  ],
  "table": "table_name",
  "type": "AlterTableStatement",
}
`;

exports[`ALTER TABLE table_name RENAME TO new_table_name 1`] = `
Object {
  "specifications": Array [
    Object {
      "tableName": "new_table_name",
      "type": "AlterTableRenameTableSpecification",
    },
  ],
  "table": "table_name",
  "type": "AlterTableStatement",
}
`;

exports[`ALTER TABLE table_name RENAME new_table_name 1`] = `
Object {
  "specifications": Array [
    Object {
      "tableName": "new_table_name",
      "type": "AlterTableRenameTableSpecification",
    },
  ],
  "table": "table_name",
  "type": "AlterTableStatement",
}
`;

exports[`ALTER TABLE tbl_name ADD COLUMN a int 1`] = `
Object {
  "specifications": Array [
    Object {
      "after": undefined,
      "columnName": "a",
      "columnType": Object {
        "arguments": undefined,
        "name": "INT",
        "type": "DataType",
      },
      "first": false,
      "type": "AlterTableAddColumnSpecification",
    },
  ],
  "table": "tbl_name",
  "type": "AlterTableStatement",
}
`;

exports[`ALTER TABLE tbl_name ADD a int 1`] = `
Object {
  "specifications": Array [
    Object {
      "after": undefined,
      "columnName": "a",
      "columnType": Object {
        "arguments": undefined,
        "name": "INT",
        "type": "DataType",
      },
      "first": false,
      "type": "AlterTableAddColumnSpecification",
    },
  ],
  "table": "tbl_name",
  "type": "AlterTableStatement",
}
`;

exports[`ALTER TABLE tbl_name ADD a int AFTER b 1`] = `
Object {
  "specifications": Array [
    Object {
      "after": "b",
      "columnName": "a",
      "columnType": Object {
        "arguments": undefined,
        "name": "INT",
        "type": "DataType",
      },
      "first": false,
      "type": "AlterTableAddColumnSpecification",
    },
  ],
  "table": "tbl_name",
  "type": "AlterTableStatement",
}
`;

exports[`ALTER TABLE tbl_name ADD a int FIRST 1`] = `
Object {
  "specifications": Array [
    Object {
      "after": undefined,
      "columnName": "a",
      "columnType": Object {
        "arguments": undefined,
        "name": "INT",
        "type": "DataType",
      },
      "first": true,
      "type": "AlterTableAddColumnSpecification",
    },
  ],
  "table": "tbl_name",
  "type": "AlterTableStatement",
}
`;

exports[`ALTER TABLE tbl_name ADD a int, ADD b int 1`] = `
Object {
  "specifications": Array [
    Object {
      "after": undefined,
      "columnName": "a",
      "columnType": Object {
        "arguments": undefined,
        "name": "INT",
        "type": "DataType",
      },
      "first": false,
      "type": "AlterTableAddColumnSpecification",
    },
    Object {
      "after": undefined,
      "columnName": "b",
      "columnType": Object {
        "arguments": undefined,
        "name": "INT",
        "type": "DataType",
      },
      "first": false,
      "type": "AlterTableAddColumnSpecification",
    },
  ],
  "table": "tbl_name",
  "type": "AlterTableStatement",
}
`;

exports[`CREATE DATABASE db_name 1`] = `
Object {
  "databaseName": "db_name",
  "type": "CreateDatabaseStatement",
}
`;

exports[`CREATE DATABASE db_name 2`] = `
Object {
  "databaseName": "db_name",
  "type": "CreateDatabaseStatement",
}
`;

exports[`CREATE INDEX idx ON t1 (col1, col2) 1`] = `
Object {
  "key": "idx",
  "keyParts": Array [
    "col1",
    "col2",
  ],
  "tableName": "t1",
  "type": "CreateIndexStatement",
}
`;

exports[`CREATE TABLE "Foo" ( a int ) 1`] = `[SyntaxError: Unexpected token.]`;

exports[`CREATE TABLE \`Foo\` ( a int ) 1`] = `
Object {
  "definitions": Array [
    Object {
      "columnName": "a",
      "columnType": Object {
        "arguments": undefined,
        "name": "INT",
        "type": "DataType",
      },
      "isPrimaryKey": false,
      "type": "CreateDefinition",
    },
  ],
  "tableName": Object {
    "type": "BacktickStringLiteral",
    "value": "Foo",
  },
  "type": "CreateTableStatement",
}
`;

exports[`CREATE TABLE Foo ( a int ) 1`] = `
Object {
  "definitions": Array [
    Object {
      "columnName": "a",
      "columnType": Object {
        "arguments": undefined,
        "name": "INT",
        "type": "DataType",
      },
      "isPrimaryKey": false,
      "type": "CreateDefinition",
    },
  ],
  "tableName": "Foo",
  "type": "CreateTableStatement",
}
`;

exports[`CREATE TABLE Foo ( a int key ) 1`] = `
Object {
  "definitions": Array [
    Object {
      "columnName": "a",
      "columnType": Object {
        "arguments": undefined,
        "name": "INT",
        "type": "DataType",
      },
      "isPrimaryKey": true,
      "type": "CreateDefinition",
    },
  ],
  "tableName": "Foo",
  "type": "CreateTableStatement",
}
`;

exports[`CREATE TABLE Foo ( a int primary key ) 1`] = `
Object {
  "definitions": Array [
    Object {
      "columnName": "a",
      "columnType": Object {
        "arguments": undefined,
        "name": "INT",
        "type": "DataType",
      },
      "isPrimaryKey": true,
      "type": "CreateDefinition",
    },
  ],
  "tableName": "Foo",
  "type": "CreateTableStatement",
}
`;

exports[`CREATE TABLE Foo ( a int, b varchar(255) ) 1`] = `
Object {
  "definitions": Array [
    Object {
      "columnName": "a",
      "columnType": Object {
        "arguments": undefined,
        "name": "INT",
        "type": "DataType",
      },
      "isPrimaryKey": false,
      "type": "CreateDefinition",
    },
    Object {
      "columnName": "b",
      "columnType": Object {
        "arguments": Array [
          "255",
        ],
        "name": "VARCHAR",
        "type": "DataType",
      },
      "isPrimaryKey": false,
      "type": "CreateDefinition",
    },
  ],
  "tableName": "Foo",
  "type": "CreateTableStatement",
}
`;

exports[`CREATE TABLE Foo ( key (id) ) 1`] = `[SyntaxError: Invalid create table definition.]`;

exports[`CREATE TABLE Foo () 1`] = `[SyntaxError: Invalid create table definition.]`;

exports[`DELETE FROM table_name WHERE a = 5 ORDER BY a LIMIT 3 1`] = `
Object {
  "limit": Object {
    "count": "3",
    "offset": undefined,
    "type": "LimitClause",
  },
  "orderBy": Object {
    "columnName": "a",
    "type": "OrderByClause",
  },
  "tableName": "table_name",
  "type": "DeleteStatement",
  "where": Object {
    "expression": Object {
      "left": "a",
      "operator": "=",
      "right": "5",
    },
    "type": "WhereClause",
  },
}
`;

exports[`DROP DATABASE IF EXISTS db_name 1`] = `
Object {
  "databaseName": "db_name",
  "hasIfExists": true,
  "type": "DropDatabaseStatement",
}
`;

exports[`DROP DATABASE db_name 1`] = `
Object {
  "databaseName": "db_name",
  "hasIfExists": false,
  "type": "DropDatabaseStatement",
}
`;

exports[`DROP INDEX index_name ON tbl_name 1`] = `
Object {
  "indexName": "index_name",
  "tableName": "tbl_name",
  "type": "DropIndexStatement",
}
`;

exports[`DROP TABLE IF EXISTS table_name 1`] = `
Object {
  "hasIfExists": true,
  "tableName": "table_name",
  "type": "DropTableStatement",
}
`;

exports[`DROP TABLE table_name 1`] = `
Object {
  "hasIfExists": false,
  "tableName": "table_name",
  "type": "DropTableStatement",
}
`;

exports[`INSERT DELAYED foo VALUES (1) 1`] = `[SyntaxError: Unexpected token.]`;

exports[`INSERT HIGH_PRIORITY foo VALUES (1) 1`] = `
Object {
  "columnNames": undefined,
  "ignore": undefined,
  "onDuplicateKeyUpdate": undefined,
  "priority": "HIGH_PRIORITY",
  "select": undefined,
  "set": undefined,
  "table": "foo",
  "type": "InsertStatement",
  "values": Object {
    "expressions": Array [
      Object {
        "expression": "1",
        "type": "ParenthesisExpression",
      },
    ],
    "type": "ValuesClause",
  },
}
`;

exports[`INSERT IGNORE foo VALUES (1) 1`] = `
Object {
  "columnNames": undefined,
  "ignore": "IGNORE",
  "onDuplicateKeyUpdate": undefined,
  "priority": undefined,
  "select": undefined,
  "set": undefined,
  "table": "foo",
  "type": "InsertStatement",
  "values": Object {
    "expressions": Array [
      Object {
        "expression": "1",
        "type": "ParenthesisExpression",
      },
    ],
    "type": "ValuesClause",
  },
}
`;

exports[`INSERT INTO foo VALUES (1) 1`] = `
Object {
  "columnNames": undefined,
  "ignore": undefined,
  "onDuplicateKeyUpdate": undefined,
  "priority": undefined,
  "select": undefined,
  "set": undefined,
  "table": "foo",
  "type": "InsertStatement",
  "values": Object {
    "expressions": Array [
      Object {
        "expression": "1",
        "type": "ParenthesisExpression",
      },
    ],
    "type": "ValuesClause",
  },
}
`;

exports[`INSERT LOW_PRIORITY foo VALUES (1) 1`] = `
Object {
  "columnNames": undefined,
  "ignore": undefined,
  "onDuplicateKeyUpdate": undefined,
  "priority": "LOW_PRIORITY",
  "select": undefined,
  "set": undefined,
  "table": "foo",
  "type": "InsertStatement",
  "values": Object {
    "expressions": Array [
      Object {
        "expression": "1",
        "type": "ParenthesisExpression",
      },
    ],
    "type": "ValuesClause",
  },
}
`;

exports[`INSERT foo (a, b) SELECT c, d FROM bar; 1`] = `
Object {
  "columnNames": Array [
    "a",
    "b",
  ],
  "ignore": undefined,
  "onDuplicateKeyUpdate": undefined,
  "priority": undefined,
  "select": Object {
    "distinct": false,
    "expressions": Array [
      "c",
      "d",
    ],
    "from": Object {
      "table": Object {
        "joins": Array [],
        "table": Object {
          "alias": undefined,
          "table": "bar",
          "type": "TableFactor",
        },
        "type": "TableReference",
      },
      "type": "FromClause",
    },
    "groupBy": undefined,
    "having": undefined,
    "highPriority": undefined,
    "limit": undefined,
    "orderBy": undefined,
    "sqlBigResult": undefined,
    "sqlBufferResult": undefined,
    "sqlCalcFoundRows": undefined,
    "sqlNoCache": undefined,
    "sqlSmallResult": undefined,
    "straightJoin": undefined,
    "type": "SelectStatement",
    "union": undefined,
    "where": undefined,
  },
  "set": undefined,
  "table": "foo",
  "type": "InsertStatement",
  "values": undefined,
}
`;

exports[`INSERT foo (a, b) VALUES (1, 2), (3, 4); 1`] = `
Object {
  "columnNames": Array [
    "a",
    "b",
  ],
  "ignore": undefined,
  "onDuplicateKeyUpdate": undefined,
  "priority": undefined,
  "select": undefined,
  "set": undefined,
  "table": "foo",
  "type": "InsertStatement",
  "values": Object {
    "expressions": Array [
      Object {
        "expressions": Array [
          "1",
          "2",
        ],
        "type": "TupleExpression",
      },
      Object {
        "expressions": Array [
          "3",
          "4",
        ],
        "type": "TupleExpression",
      },
    ],
    "type": "ValuesClause",
  },
}
`;

exports[`INSERT foo SET a = 1, b = 2; 1`] = `
Object {
  "columnNames": undefined,
  "ignore": undefined,
  "onDuplicateKeyUpdate": undefined,
  "priority": undefined,
  "select": undefined,
  "set": Object {
    "asignments": Array [
      Object {
        "left": "a",
        "right": "1",
        "type": "AssignmentExpression",
      },
      Object {
        "left": "b",
        "right": "2",
        "type": "AssignmentExpression",
      },
    ],
    "type": "AssignmentList",
  },
  "table": "foo",
  "type": "InsertStatement",
  "values": undefined,
}
`;

exports[`INSERT foo VALUES (1) 1`] = `
Object {
  "columnNames": undefined,
  "ignore": undefined,
  "onDuplicateKeyUpdate": undefined,
  "priority": undefined,
  "select": undefined,
  "set": undefined,
  "table": "foo",
  "type": "InsertStatement",
  "values": Object {
    "expressions": Array [
      Object {
        "expression": "1",
        "type": "ParenthesisExpression",
      },
    ],
    "type": "ValuesClause",
  },
}
`;

exports[`INSERT foo VALUES (1) 2`] = `
Object {
  "columnNames": undefined,
  "ignore": undefined,
  "onDuplicateKeyUpdate": undefined,
  "priority": undefined,
  "select": undefined,
  "set": undefined,
  "table": "foo",
  "type": "InsertStatement",
  "values": Object {
    "expressions": Array [
      Object {
        "expression": "1",
        "type": "ParenthesisExpression",
      },
    ],
    "type": "ValuesClause",
  },
}
`;

exports[`INSERT foo VALUES (1) ON DUPLICATE KEY UPDATE a = 1, b = 2; 1`] = `
Object {
  "columnNames": undefined,
  "ignore": undefined,
  "onDuplicateKeyUpdate": Object {
    "asignments": Array [
      Object {
        "left": "a",
        "right": "1",
        "type": "AssignmentExpression",
      },
      Object {
        "left": "b",
        "right": "2",
        "type": "AssignmentExpression",
      },
    ],
    "type": "AssignmentList",
  },
  "priority": undefined,
  "select": undefined,
  "set": undefined,
  "table": "foo",
  "type": "InsertStatement",
  "values": Object {
    "expressions": Array [
      Object {
        "expression": "1",
        "type": "ParenthesisExpression",
      },
    ],
    "type": "ValuesClause",
  },
}
`;

exports[`INSERT foo VALUES (1) ON DUPLICATE KEY UPDATE a = 1; 1`] = `
Object {
  "columnNames": undefined,
  "ignore": undefined,
  "onDuplicateKeyUpdate": Object {
    "left": "a",
    "right": "1",
    "type": "AssignmentExpression",
  },
  "priority": undefined,
  "select": undefined,
  "set": undefined,
  "table": "foo",
  "type": "InsertStatement",
  "values": Object {
    "expressions": Array [
      Object {
        "expression": "1",
        "type": "ParenthesisExpression",
      },
    ],
    "type": "ValuesClause",
  },
}
`;

exports[`INSERT foo VALUES (1) ON DUPLICATE KEY UPDATE a; 1`] = `[SyntaxError: "=" expected.]`;

exports[`INSERT foo VALUES (1, 2) 1`] = `
Object {
  "columnNames": undefined,
  "ignore": undefined,
  "onDuplicateKeyUpdate": undefined,
  "priority": undefined,
  "select": undefined,
  "set": undefined,
  "table": "foo",
  "type": "InsertStatement",
  "values": Object {
    "expressions": Array [
      Object {
        "expressions": Array [
          "1",
          "2",
        ],
        "type": "TupleExpression",
      },
    ],
    "type": "ValuesClause",
  },
}
`;

exports[`SELECT "1", '1', \`1\` 1`] = `
Object {
  "distinct": false,
  "expressions": Array [
    Object {
      "type": "StringLiteral",
      "value": "1",
    },
    Object {
      "type": "StringLiteral",
      "value": "1",
    },
    Object {
      "type": "BacktickStringLiteral",
      "value": "1",
    },
  ],
  "from": undefined,
  "groupBy": undefined,
  "having": undefined,
  "highPriority": undefined,
  "limit": undefined,
  "orderBy": undefined,
  "sqlBigResult": undefined,
  "sqlBufferResult": undefined,
  "sqlCalcFoundRows": undefined,
  "sqlNoCache": undefined,
  "sqlSmallResult": undefined,
  "straightJoin": undefined,
  "type": "SelectStatement",
  "union": undefined,
  "where": undefined,
}
`;

exports[`SELECT "a".b 1`] = `[SyntaxError: Invalid syntax.]`;

exports[`SELECT "foo"() 1`] = `[SyntaxError: Invalid syntax.]`;

exports[`SELECT (SELECT 1) 1`] = `
Object {
  "distinct": false,
  "expressions": Array [
    Object {
      "distinct": false,
      "expressions": Array [
        "1",
      ],
      "from": undefined,
      "groupBy": undefined,
      "having": undefined,
      "highPriority": undefined,
      "limit": undefined,
      "orderBy": undefined,
      "sqlBigResult": undefined,
      "sqlBufferResult": undefined,
      "sqlCalcFoundRows": undefined,
      "sqlNoCache": undefined,
      "sqlSmallResult": undefined,
      "straightJoin": undefined,
      "type": "SelectStatement",
      "union": undefined,
      "where": undefined,
    },
  ],
  "from": undefined,
  "groupBy": undefined,
  "having": undefined,
  "highPriority": undefined,
  "limit": undefined,
  "orderBy": undefined,
  "sqlBigResult": undefined,
  "sqlBufferResult": undefined,
  "sqlCalcFoundRows": undefined,
  "sqlNoCache": undefined,
  "sqlSmallResult": undefined,
  "straightJoin": undefined,
  "type": "SelectStatement",
  "union": undefined,
  "where": undefined,
}
`;

exports[`SELECT (a) 1`] = `
Object {
  "distinct": false,
  "expressions": Array [
    Object {
      "expression": "a",
      "type": "ParenthesisExpression",
    },
  ],
  "from": undefined,
  "groupBy": undefined,
  "having": undefined,
  "highPriority": undefined,
  "limit": undefined,
  "orderBy": undefined,
  "sqlBigResult": undefined,
  "sqlBufferResult": undefined,
  "sqlCalcFoundRows": undefined,
  "sqlNoCache": undefined,
  "sqlSmallResult": undefined,
  "straightJoin": undefined,
  "type": "SelectStatement",
  "union": undefined,
  "where": undefined,
}
`;

exports[`SELECT (f)() 1`] = `[SyntaxError: Invalid syntax.]`;

exports[`SELECT * FROM "foo" 1`] = `[SyntaxError: Unexpected token.]`;

exports[`SELECT * FROM (SELECT * FROM foo) 1`] = `[SyntaxError: Missing alias for subquery.]`;

exports[`SELECT * FROM (SELECT * FROM foo) alias 1`] = `
Object {
  "distinct": false,
  "expressions": Array [
    Object {
      "type": "WildcardExpression",
    },
  ],
  "from": Object {
    "table": Object {
      "joins": Array [],
      "table": Object {
        "alias": "alias",
        "table": Object {
          "distinct": false,
          "expressions": Array [
            Object {
              "type": "WildcardExpression",
            },
          ],
          "from": Object {
            "table": Object {
              "joins": Array [],
              "table": Object {
                "alias": undefined,
                "table": "foo",
                "type": "TableFactor",
              },
              "type": "TableReference",
            },
            "type": "FromClause",
          },
          "groupBy": undefined,
          "having": undefined,
          "highPriority": undefined,
          "limit": undefined,
          "orderBy": undefined,
          "sqlBigResult": undefined,
          "sqlBufferResult": undefined,
          "sqlCalcFoundRows": undefined,
          "sqlNoCache": undefined,
          "sqlSmallResult": undefined,
          "straightJoin": undefined,
          "type": "SelectStatement",
          "union": undefined,
          "where": undefined,
        },
        "type": "TableFactor",
      },
      "type": "TableReference",
    },
    "type": "FromClause",
  },
  "groupBy": undefined,
  "having": undefined,
  "highPriority": undefined,
  "limit": undefined,
  "orderBy": undefined,
  "sqlBigResult": undefined,
  "sqlBufferResult": undefined,
  "sqlCalcFoundRows": undefined,
  "sqlNoCache": undefined,
  "sqlSmallResult": undefined,
  "straightJoin": undefined,
  "type": "SelectStatement",
  "union": undefined,
  "where": undefined,
}
`;

exports[`SELECT * FROM \`foo\`.\`goo\` 1`] = `
Object {
  "distinct": false,
  "expressions": Array [
    Object {
      "type": "WildcardExpression",
    },
  ],
  "from": Object {
    "table": Object {
      "joins": Array [],
      "table": Object {
        "alias": undefined,
        "table": Object {
          "left": Object {
            "type": "BacktickStringLiteral",
            "value": "foo",
          },
          "right": Object {
            "type": "BacktickStringLiteral",
            "value": "goo",
          },
          "type": "MemberExpression",
        },
        "type": "TableFactor",
      },
      "type": "TableReference",
    },
    "type": "FromClause",
  },
  "groupBy": undefined,
  "having": undefined,
  "highPriority": undefined,
  "limit": undefined,
  "orderBy": undefined,
  "sqlBigResult": undefined,
  "sqlBufferResult": undefined,
  "sqlCalcFoundRows": undefined,
  "sqlNoCache": undefined,
  "sqlSmallResult": undefined,
  "straightJoin": undefined,
  "type": "SelectStatement",
  "union": undefined,
  "where": undefined,
}
`;

exports[`SELECT * FROM f.g.h 1`] = `[SyntaxError: Invalid syntax.]`;

exports[`SELECT * FROM foo 1`] = `
Object {
  "distinct": false,
  "expressions": Array [
    Object {
      "type": "WildcardExpression",
    },
  ],
  "from": Object {
    "table": Object {
      "joins": Array [],
      "table": Object {
        "alias": undefined,
        "table": "foo",
        "type": "TableFactor",
      },
      "type": "TableReference",
    },
    "type": "FromClause",
  },
  "groupBy": undefined,
  "having": undefined,
  "highPriority": undefined,
  "limit": undefined,
  "orderBy": undefined,
  "sqlBigResult": undefined,
  "sqlBufferResult": undefined,
  "sqlCalcFoundRows": undefined,
  "sqlNoCache": undefined,
  "sqlSmallResult": undefined,
  "straightJoin": undefined,
  "type": "SelectStatement",
  "union": undefined,
  "where": undefined,
}
`;

exports[`SELECT * FROM foo GROUP BY a HAVING b=5 1`] = `
Object {
  "distinct": false,
  "expressions": Array [
    Object {
      "type": "WildcardExpression",
    },
  ],
  "from": Object {
    "table": Object {
      "joins": Array [],
      "table": Object {
        "alias": undefined,
        "table": "foo",
        "type": "TableFactor",
      },
      "type": "TableReference",
    },
    "type": "FromClause",
  },
  "groupBy": Object {
    "expressions": Array [
      "a",
    ],
    "type": "GroupByClause",
  },
  "having": Object {
    "expression": Object {
      "left": "b",
      "operator": "=",
      "right": "5",
    },
    "type": "HavingClause",
  },
  "highPriority": undefined,
  "limit": undefined,
  "orderBy": undefined,
  "sqlBigResult": undefined,
  "sqlBufferResult": undefined,
  "sqlCalcFoundRows": undefined,
  "sqlNoCache": undefined,
  "sqlSmallResult": undefined,
  "straightJoin": undefined,
  "type": "SelectStatement",
  "union": undefined,
  "where": undefined,
}
`;

exports[`SELECT * FROM foo JOIN goo 1`] = `
Object {
  "distinct": false,
  "expressions": Array [
    Object {
      "type": "WildcardExpression",
    },
  ],
  "from": Object {
    "table": Object {
      "joins": Array [
        Object {
          "joinType": "inner",
          "on": undefined,
          "table": Object {
            "alias": undefined,
            "table": "goo",
            "type": "TableFactor",
          },
          "type": "JoinClause",
        },
      ],
      "table": Object {
        "alias": undefined,
        "table": "foo",
        "type": "TableFactor",
      },
      "type": "TableReference",
    },
    "type": "FromClause",
  },
  "groupBy": undefined,
  "having": undefined,
  "highPriority": undefined,
  "limit": undefined,
  "orderBy": undefined,
  "sqlBigResult": undefined,
  "sqlBufferResult": undefined,
  "sqlCalcFoundRows": undefined,
  "sqlNoCache": undefined,
  "sqlSmallResult": undefined,
  "straightJoin": undefined,
  "type": "SelectStatement",
  "union": undefined,
  "where": undefined,
}
`;

exports[`SELECT * FROM foo JOIN goo ON f.a = g.a 1`] = `
Object {
  "distinct": false,
  "expressions": Array [
    Object {
      "type": "WildcardExpression",
    },
  ],
  "from": Object {
    "table": Object {
      "joins": Array [
        Object {
          "joinType": "inner",
          "on": Object {
            "expression": Object {
              "left": Object {
                "left": "f",
                "right": "a",
                "type": "MemberExpression",
              },
              "operator": "=",
              "right": Object {
                "left": "g",
                "right": "a",
                "type": "MemberExpression",
              },
            },
            "type": "OnClause",
          },
          "table": Object {
            "alias": undefined,
            "table": "goo",
            "type": "TableFactor",
          },
          "type": "JoinClause",
        },
      ],
      "table": Object {
        "alias": undefined,
        "table": "foo",
        "type": "TableFactor",
      },
      "type": "TableReference",
    },
    "type": "FromClause",
  },
  "groupBy": undefined,
  "having": undefined,
  "highPriority": undefined,
  "limit": undefined,
  "orderBy": undefined,
  "sqlBigResult": undefined,
  "sqlBufferResult": undefined,
  "sqlCalcFoundRows": undefined,
  "sqlNoCache": undefined,
  "sqlSmallResult": undefined,
  "straightJoin": undefined,
  "type": "SelectStatement",
  "union": undefined,
  "where": undefined,
}
`;

exports[`SELECT * FROM foo LEFT JOIN goo 1`] = `[SyntaxError: Invalid syntax.]`;

exports[`SELECT * FROM foo LEFT JOIN goo ON foo.a = goo.a 1`] = `
Object {
  "distinct": false,
  "expressions": Array [
    Object {
      "type": "WildcardExpression",
    },
  ],
  "from": Object {
    "table": Object {
      "joins": Array [
        Object {
          "joinType": "left",
          "on": Object {
            "expression": Object {
              "left": Object {
                "left": "foo",
                "right": "a",
                "type": "MemberExpression",
              },
              "operator": "=",
              "right": Object {
                "left": "goo",
                "right": "a",
                "type": "MemberExpression",
              },
            },
            "type": "OnClause",
          },
          "table": Object {
            "alias": undefined,
            "table": "goo",
            "type": "TableFactor",
          },
          "type": "JoinClause",
        },
      ],
      "table": Object {
        "alias": undefined,
        "table": "foo",
        "type": "TableFactor",
      },
      "type": "TableReference",
    },
    "type": "FromClause",
  },
  "groupBy": undefined,
  "having": undefined,
  "highPriority": undefined,
  "limit": undefined,
  "orderBy": undefined,
  "sqlBigResult": undefined,
  "sqlBufferResult": undefined,
  "sqlCalcFoundRows": undefined,
  "sqlNoCache": undefined,
  "sqlSmallResult": undefined,
  "straightJoin": undefined,
  "type": "SelectStatement",
  "union": undefined,
  "where": undefined,
}
`;

exports[`SELECT * FROM foo WHERE a = (SELECT 42) 1`] = `
Object {
  "distinct": false,
  "expressions": Array [
    Object {
      "type": "WildcardExpression",
    },
  ],
  "from": Object {
    "table": Object {
      "joins": Array [],
      "table": Object {
        "alias": undefined,
        "table": "foo",
        "type": "TableFactor",
      },
      "type": "TableReference",
    },
    "type": "FromClause",
  },
  "groupBy": undefined,
  "having": undefined,
  "highPriority": undefined,
  "limit": undefined,
  "orderBy": undefined,
  "sqlBigResult": undefined,
  "sqlBufferResult": undefined,
  "sqlCalcFoundRows": undefined,
  "sqlNoCache": undefined,
  "sqlSmallResult": undefined,
  "straightJoin": undefined,
  "type": "SelectStatement",
  "union": undefined,
  "where": Object {
    "expression": Object {
      "left": "a",
      "operator": "=",
      "right": Object {
        "distinct": false,
        "expressions": Array [
          "42",
        ],
        "from": undefined,
        "groupBy": undefined,
        "having": undefined,
        "highPriority": undefined,
        "limit": undefined,
        "orderBy": undefined,
        "sqlBigResult": undefined,
        "sqlBufferResult": undefined,
        "sqlCalcFoundRows": undefined,
        "sqlNoCache": undefined,
        "sqlSmallResult": undefined,
        "straightJoin": undefined,
        "type": "SelectStatement",
        "union": undefined,
        "where": undefined,
      },
    },
    "type": "WhereClause",
  },
}
`;

exports[`SELECT * FROM foo as goo 1`] = `
Object {
  "distinct": false,
  "expressions": Array [
    Object {
      "type": "WildcardExpression",
    },
  ],
  "from": Object {
    "table": Object {
      "joins": Array [],
      "table": Object {
        "alias": "goo",
        "table": "foo",
        "type": "TableFactor",
      },
      "type": "TableReference",
    },
    "type": "FromClause",
  },
  "groupBy": undefined,
  "having": undefined,
  "highPriority": undefined,
  "limit": undefined,
  "orderBy": undefined,
  "sqlBigResult": undefined,
  "sqlBufferResult": undefined,
  "sqlCalcFoundRows": undefined,
  "sqlNoCache": undefined,
  "sqlSmallResult": undefined,
  "straightJoin": undefined,
  "type": "SelectStatement",
  "union": undefined,
  "where": undefined,
}
`;

exports[`SELECT * FROM foo f LEFT JOIN goo g ON f.a = g.a 1`] = `
Object {
  "distinct": false,
  "expressions": Array [
    Object {
      "type": "WildcardExpression",
    },
  ],
  "from": Object {
    "table": Object {
      "joins": Array [
        Object {
          "joinType": "left",
          "on": Object {
            "expression": Object {
              "left": Object {
                "left": "f",
                "right": "a",
                "type": "MemberExpression",
              },
              "operator": "=",
              "right": Object {
                "left": "g",
                "right": "a",
                "type": "MemberExpression",
              },
            },
            "type": "OnClause",
          },
          "table": Object {
            "alias": "g",
            "table": "goo",
            "type": "TableFactor",
          },
          "type": "JoinClause",
        },
      ],
      "table": Object {
        "alias": "f",
        "table": "foo",
        "type": "TableFactor",
      },
      "type": "TableReference",
    },
    "type": "FromClause",
  },
  "groupBy": undefined,
  "having": undefined,
  "highPriority": undefined,
  "limit": undefined,
  "orderBy": undefined,
  "sqlBigResult": undefined,
  "sqlBufferResult": undefined,
  "sqlCalcFoundRows": undefined,
  "sqlNoCache": undefined,
  "sqlSmallResult": undefined,
  "straightJoin": undefined,
  "type": "SelectStatement",
  "union": undefined,
  "where": undefined,
}
`;

exports[`SELECT * FROM foo goo 1`] = `
Object {
  "distinct": false,
  "expressions": Array [
    Object {
      "type": "WildcardExpression",
    },
  ],
  "from": Object {
    "table": Object {
      "joins": Array [],
      "table": Object {
        "alias": "goo",
        "table": "foo",
        "type": "TableFactor",
      },
      "type": "TableReference",
    },
    "type": "FromClause",
  },
  "groupBy": undefined,
  "having": undefined,
  "highPriority": undefined,
  "limit": undefined,
  "orderBy": undefined,
  "sqlBigResult": undefined,
  "sqlBufferResult": undefined,
  "sqlCalcFoundRows": undefined,
  "sqlNoCache": undefined,
  "sqlSmallResult": undefined,
  "straightJoin": undefined,
  "type": "SelectStatement",
  "union": undefined,
  "where": undefined,
}
`;

exports[`SELECT * FROM foo, goo 1`] = `
Object {
  "distinct": false,
  "expressions": Array [
    Object {
      "type": "WildcardExpression",
    },
  ],
  "from": Object {
    "table": Object {
      "tables": Array [
        Object {
          "joins": Array [],
          "table": Object {
            "alias": undefined,
            "table": "foo",
            "type": "TableFactor",
          },
          "type": "TableReference",
        },
        Object {
          "joins": Array [],
          "table": Object {
            "alias": undefined,
            "table": "goo",
            "type": "TableFactor",
          },
          "type": "TableReference",
        },
      ],
      "type": "TableReferenceList",
    },
    "type": "FromClause",
  },
  "groupBy": undefined,
  "having": undefined,
  "highPriority": undefined,
  "limit": undefined,
  "orderBy": undefined,
  "sqlBigResult": undefined,
  "sqlBufferResult": undefined,
  "sqlCalcFoundRows": undefined,
  "sqlNoCache": undefined,
  "sqlSmallResult": undefined,
  "straightJoin": undefined,
  "type": "SelectStatement",
  "union": undefined,
  "where": undefined,
}
`;

exports[`SELECT * FROM foo.goo 1`] = `
Object {
  "distinct": false,
  "expressions": Array [
    Object {
      "type": "WildcardExpression",
    },
  ],
  "from": Object {
    "table": Object {
      "joins": Array [],
      "table": Object {
        "alias": undefined,
        "table": Object {
          "left": "foo",
          "right": "goo",
          "type": "MemberExpression",
        },
        "type": "TableFactor",
      },
      "type": "TableReference",
    },
    "type": "FromClause",
  },
  "groupBy": undefined,
  "having": undefined,
  "highPriority": undefined,
  "limit": undefined,
  "orderBy": undefined,
  "sqlBigResult": undefined,
  "sqlBufferResult": undefined,
  "sqlCalcFoundRows": undefined,
  "sqlNoCache": undefined,
  "sqlSmallResult": undefined,
  "straightJoin": undefined,
  "type": "SelectStatement",
  "union": undefined,
  "where": undefined,
}
`;

exports[`SELECT * LIMIT 10 OFFSET 50 1`] = `
Object {
  "distinct": false,
  "expressions": Array [
    Object {
      "type": "WildcardExpression",
    },
  ],
  "from": undefined,
  "groupBy": undefined,
  "having": undefined,
  "highPriority": undefined,
  "limit": Object {
    "count": "10",
    "offset": "50",
    "type": "LimitClause",
  },
  "orderBy": undefined,
  "sqlBigResult": undefined,
  "sqlBufferResult": undefined,
  "sqlCalcFoundRows": undefined,
  "sqlNoCache": undefined,
  "sqlSmallResult": undefined,
  "straightJoin": undefined,
  "type": "SelectStatement",
  "union": undefined,
  "where": undefined,
}
`;

exports[`SELECT * LIMIT 50, 10 1`] = `
Object {
  "distinct": false,
  "expressions": Array [
    Object {
      "type": "WildcardExpression",
    },
  ],
  "from": undefined,
  "groupBy": undefined,
  "having": undefined,
  "highPriority": undefined,
  "limit": Object {
    "count": "10",
    "offset": "50",
    "type": "LimitClause",
  },
  "orderBy": undefined,
  "sqlBigResult": undefined,
  "sqlBufferResult": undefined,
  "sqlCalcFoundRows": undefined,
  "sqlNoCache": undefined,
  "sqlSmallResult": undefined,
  "straightJoin": undefined,
  "type": "SelectStatement",
  "union": undefined,
  "where": undefined,
}
`;

exports[`SELECT * ORDER BY a 1`] = `
Object {
  "distinct": false,
  "expressions": Array [
    Object {
      "type": "WildcardExpression",
    },
  ],
  "from": undefined,
  "groupBy": undefined,
  "having": undefined,
  "highPriority": undefined,
  "limit": undefined,
  "orderBy": Object {
    "columnName": "a",
    "type": "OrderByClause",
  },
  "sqlBigResult": undefined,
  "sqlBufferResult": undefined,
  "sqlCalcFoundRows": undefined,
  "sqlNoCache": undefined,
  "sqlSmallResult": undefined,
  "straightJoin": undefined,
  "type": "SelectStatement",
  "union": undefined,
  "where": undefined,
}
`;

exports[`SELECT *.a 1`] = `[SyntaxError: Invalid syntax.]`;

exports[`SELECT + 1 - 2 1`] = `
Object {
  "distinct": false,
  "expressions": Array [
    Object {
      "left": Object {
        "operand": "1",
        "operator": "+",
        "type": "UnaryExpression",
      },
      "operator": "-",
      "right": "2",
    },
  ],
  "from": undefined,
  "groupBy": undefined,
  "having": undefined,
  "highPriority": undefined,
  "limit": undefined,
  "orderBy": undefined,
  "sqlBigResult": undefined,
  "sqlBufferResult": undefined,
  "sqlCalcFoundRows": undefined,
  "sqlNoCache": undefined,
  "sqlSmallResult": undefined,
  "straightJoin": undefined,
  "type": "SelectStatement",
  "union": undefined,
  "where": undefined,
}
`;

exports[`SELECT +-!~1 1`] = `
Object {
  "distinct": false,
  "expressions": Array [
    Object {
      "operand": Object {
        "operand": Object {
          "operand": Object {
            "operand": "1",
            "operator": "~",
            "type": "UnaryExpression",
          },
          "operator": "!",
          "type": "UnaryExpression",
        },
        "operator": "-",
        "type": "UnaryExpression",
      },
      "operator": "+",
      "type": "UnaryExpression",
    },
  ],
  "from": undefined,
  "groupBy": undefined,
  "having": undefined,
  "highPriority": undefined,
  "limit": undefined,
  "orderBy": undefined,
  "sqlBigResult": undefined,
  "sqlBufferResult": undefined,
  "sqlCalcFoundRows": undefined,
  "sqlNoCache": undefined,
  "sqlSmallResult": undefined,
  "straightJoin": undefined,
  "type": "SelectStatement",
  "union": undefined,
  "where": undefined,
}
`;

exports[`SELECT \`a\`.\`b\` 1`] = `
Object {
  "distinct": false,
  "expressions": Array [
    Object {
      "left": Object {
        "type": "BacktickStringLiteral",
        "value": "a",
      },
      "right": Object {
        "type": "BacktickStringLiteral",
        "value": "b",
      },
      "type": "MemberExpression",
    },
  ],
  "from": undefined,
  "groupBy": undefined,
  "having": undefined,
  "highPriority": undefined,
  "limit": undefined,
  "orderBy": undefined,
  "sqlBigResult": undefined,
  "sqlBufferResult": undefined,
  "sqlCalcFoundRows": undefined,
  "sqlNoCache": undefined,
  "sqlSmallResult": undefined,
  "straightJoin": undefined,
  "type": "SelectStatement",
  "union": undefined,
  "where": undefined,
}
`;

exports[`SELECT \`foo\`() 1`] = `
Object {
  "distinct": false,
  "expressions": Array [
    Object {
      "arguments": Array [],
      "callee": Object {
        "type": "BacktickStringLiteral",
        "value": "foo",
      },
      "type": "CallExpression",
    },
  ],
  "from": undefined,
  "groupBy": undefined,
  "having": undefined,
  "highPriority": undefined,
  "limit": undefined,
  "orderBy": undefined,
  "sqlBigResult": undefined,
  "sqlBufferResult": undefined,
  "sqlCalcFoundRows": undefined,
  "sqlNoCache": undefined,
  "sqlSmallResult": undefined,
  "straightJoin": undefined,
  "type": "SelectStatement",
  "union": undefined,
  "where": undefined,
}
`;

exports[`SELECT \`foo\`.\`bar\`() 1`] = `
Object {
  "distinct": false,
  "expressions": Array [
    Object {
      "arguments": Array [],
      "callee": Object {
        "left": Object {
          "type": "BacktickStringLiteral",
          "value": "foo",
        },
        "right": Object {
          "type": "BacktickStringLiteral",
          "value": "bar",
        },
        "type": "MemberExpression",
      },
      "type": "CallExpression",
    },
  ],
  "from": undefined,
  "groupBy": undefined,
  "having": undefined,
  "highPriority": undefined,
  "limit": undefined,
  "orderBy": undefined,
  "sqlBigResult": undefined,
  "sqlBufferResult": undefined,
  "sqlCalcFoundRows": undefined,
  "sqlNoCache": undefined,
  "sqlSmallResult": undefined,
  "straightJoin": undefined,
  "type": "SelectStatement",
  "union": undefined,
  "where": undefined,
}
`;

exports[`SELECT - a.b 1`] = `
Object {
  "distinct": false,
  "expressions": Array [
    Object {
      "operand": Object {
        "left": "a",
        "right": "b",
        "type": "MemberExpression",
      },
      "operator": "-",
      "type": "UnaryExpression",
    },
  ],
  "from": undefined,
  "groupBy": undefined,
  "having": undefined,
  "highPriority": undefined,
  "limit": undefined,
  "orderBy": undefined,
  "sqlBigResult": undefined,
  "sqlBufferResult": undefined,
  "sqlCalcFoundRows": undefined,
  "sqlNoCache": undefined,
  "sqlSmallResult": undefined,
  "straightJoin": undefined,
  "type": "SelectStatement",
  "union": undefined,
  "where": undefined,
}
`;

exports[`SELECT 1`] = `[SyntaxError: Invalid syntax.]`;

exports[`SELECT 1 SELECT 2 1`] = `[SyntaxError: Invalid syntax.]`;

exports[`SELECT 1 UNION SELECT 2 1`] = `
Object {
  "distinct": false,
  "expressions": Array [
    "1",
  ],
  "from": undefined,
  "groupBy": undefined,
  "having": undefined,
  "highPriority": undefined,
  "limit": undefined,
  "orderBy": undefined,
  "sqlBigResult": undefined,
  "sqlBufferResult": undefined,
  "sqlCalcFoundRows": undefined,
  "sqlNoCache": undefined,
  "sqlSmallResult": undefined,
  "straightJoin": undefined,
  "type": "SelectStatement",
  "union": Object {
    "distinct": false,
    "expressions": Array [
      "2",
    ],
    "from": undefined,
    "groupBy": undefined,
    "having": undefined,
    "highPriority": undefined,
    "limit": undefined,
    "orderBy": undefined,
    "sqlBigResult": undefined,
    "sqlBufferResult": undefined,
    "sqlCalcFoundRows": undefined,
    "sqlNoCache": undefined,
    "sqlSmallResult": undefined,
    "straightJoin": undefined,
    "type": "SelectStatement",
    "union": undefined,
    "where": undefined,
  },
  "where": undefined,
}
`;

exports[`SELECT 1 UNION SELECT 2 UNION SELECT 3 1`] = `
Object {
  "distinct": false,
  "expressions": Array [
    "1",
  ],
  "from": undefined,
  "groupBy": undefined,
  "having": undefined,
  "highPriority": undefined,
  "limit": undefined,
  "orderBy": undefined,
  "sqlBigResult": undefined,
  "sqlBufferResult": undefined,
  "sqlCalcFoundRows": undefined,
  "sqlNoCache": undefined,
  "sqlSmallResult": undefined,
  "straightJoin": undefined,
  "type": "SelectStatement",
  "union": Object {
    "distinct": false,
    "expressions": Array [
      "2",
    ],
    "from": undefined,
    "groupBy": undefined,
    "having": undefined,
    "highPriority": undefined,
    "limit": undefined,
    "orderBy": undefined,
    "sqlBigResult": undefined,
    "sqlBufferResult": undefined,
    "sqlCalcFoundRows": undefined,
    "sqlNoCache": undefined,
    "sqlSmallResult": undefined,
    "straightJoin": undefined,
    "type": "SelectStatement",
    "union": Object {
      "distinct": false,
      "expressions": Array [
        "3",
      ],
      "from": undefined,
      "groupBy": undefined,
      "having": undefined,
      "highPriority": undefined,
      "limit": undefined,
      "orderBy": undefined,
      "sqlBigResult": undefined,
      "sqlBufferResult": undefined,
      "sqlCalcFoundRows": undefined,
      "sqlNoCache": undefined,
      "sqlSmallResult": undefined,
      "straightJoin": undefined,
      "type": "SelectStatement",
      "union": undefined,
      "where": undefined,
    },
    "where": undefined,
  },
  "where": undefined,
}
`;

exports[`SELECT 1 UPDATE foo SET a = 5 1`] = `[SyntaxError: Invalid syntax.]`;

exports[`SELECT 1; SELECT 2; 1`] = `
Object {
  "expected": undefined,
  "index": undefined,
  "message": "Invalid syntax.",
  "type": undefined,
}
`;

exports[`SELECT 2 * (a % b) 1`] = `
Object {
  "distinct": false,
  "expressions": Array [
    Object {
      "left": "2",
      "operator": "*",
      "right": Object {
        "expression": Object {
          "left": "a",
          "operator": "%",
          "right": "b",
        },
        "type": "ParenthesisExpression",
      },
    },
  ],
  "from": undefined,
  "groupBy": undefined,
  "having": undefined,
  "highPriority": undefined,
  "limit": undefined,
  "orderBy": undefined,
  "sqlBigResult": undefined,
  "sqlBufferResult": undefined,
  "sqlCalcFoundRows": undefined,
  "sqlNoCache": undefined,
  "sqlSmallResult": undefined,
  "straightJoin": undefined,
  "type": "SelectStatement",
  "union": undefined,
  "where": undefined,
}
`;

exports[`SELECT ALL * 1`] = `
Object {
  "distinct": false,
  "expressions": Array [
    Object {
      "type": "WildcardExpression",
    },
  ],
  "from": undefined,
  "groupBy": undefined,
  "having": undefined,
  "highPriority": undefined,
  "limit": undefined,
  "orderBy": undefined,
  "sqlBigResult": undefined,
  "sqlBufferResult": undefined,
  "sqlCalcFoundRows": undefined,
  "sqlNoCache": undefined,
  "sqlSmallResult": undefined,
  "straightJoin": undefined,
  "type": "SelectStatement",
  "union": undefined,
  "where": undefined,
}
`;

exports[`SELECT CURRENT_DATE() 1`] = `
Object {
  "distinct": false,
  "expressions": Array [
    Object {
      "arguments": Array [],
      "callee": "CURRENT_DATE",
      "type": "CallExpression",
    },
  ],
  "from": undefined,
  "groupBy": undefined,
  "having": undefined,
  "highPriority": undefined,
  "limit": undefined,
  "orderBy": undefined,
  "sqlBigResult": undefined,
  "sqlBufferResult": undefined,
  "sqlCalcFoundRows": undefined,
  "sqlNoCache": undefined,
  "sqlSmallResult": undefined,
  "straightJoin": undefined,
  "type": "SelectStatement",
  "union": undefined,
  "where": undefined,
}
`;

exports[`SELECT DISTINCT * 1`] = `
Object {
  "distinct": true,
  "expressions": Array [
    Object {
      "type": "WildcardExpression",
    },
  ],
  "from": undefined,
  "groupBy": undefined,
  "having": undefined,
  "highPriority": undefined,
  "limit": undefined,
  "orderBy": undefined,
  "sqlBigResult": undefined,
  "sqlBufferResult": undefined,
  "sqlCalcFoundRows": undefined,
  "sqlNoCache": undefined,
  "sqlSmallResult": undefined,
  "straightJoin": undefined,
  "type": "SelectStatement",
  "union": undefined,
  "where": undefined,
}
`;

exports[`SELECT DISTINCTROW * 1`] = `
Object {
  "distinct": true,
  "expressions": Array [
    Object {
      "type": "WildcardExpression",
    },
  ],
  "from": undefined,
  "groupBy": undefined,
  "having": undefined,
  "highPriority": undefined,
  "limit": undefined,
  "orderBy": undefined,
  "sqlBigResult": undefined,
  "sqlBufferResult": undefined,
  "sqlCalcFoundRows": undefined,
  "sqlNoCache": undefined,
  "sqlSmallResult": undefined,
  "straightJoin": undefined,
  "type": "SelectStatement",
  "union": undefined,
  "where": undefined,
}
`;

exports[`SELECT HIGH_PRIORITY * 1`] = `
Object {
  "distinct": false,
  "expressions": Array [
    Object {
      "type": "WildcardExpression",
    },
  ],
  "from": undefined,
  "groupBy": undefined,
  "having": undefined,
  "highPriority": "HIGH_PRIORITY",
  "limit": undefined,
  "orderBy": undefined,
  "sqlBigResult": undefined,
  "sqlBufferResult": undefined,
  "sqlCalcFoundRows": undefined,
  "sqlNoCache": undefined,
  "sqlSmallResult": undefined,
  "straightJoin": undefined,
  "type": "SelectStatement",
  "union": undefined,
  "where": undefined,
}
`;

exports[`SELECT SQL_BIG_RESULT * 1`] = `
Object {
  "distinct": false,
  "expressions": Array [
    Object {
      "type": "WildcardExpression",
    },
  ],
  "from": undefined,
  "groupBy": undefined,
  "having": undefined,
  "highPriority": undefined,
  "limit": undefined,
  "orderBy": undefined,
  "sqlBigResult": "SQL_BIG_RESULT",
  "sqlBufferResult": undefined,
  "sqlCalcFoundRows": undefined,
  "sqlNoCache": undefined,
  "sqlSmallResult": undefined,
  "straightJoin": undefined,
  "type": "SelectStatement",
  "union": undefined,
  "where": undefined,
}
`;

exports[`SELECT SQL_BUFFER_RESULT * 1`] = `
Object {
  "distinct": false,
  "expressions": Array [
    Object {
      "type": "WildcardExpression",
    },
  ],
  "from": undefined,
  "groupBy": undefined,
  "having": undefined,
  "highPriority": undefined,
  "limit": undefined,
  "orderBy": undefined,
  "sqlBigResult": undefined,
  "sqlBufferResult": "SQL_BUFFER_RESULT",
  "sqlCalcFoundRows": undefined,
  "sqlNoCache": undefined,
  "sqlSmallResult": undefined,
  "straightJoin": undefined,
  "type": "SelectStatement",
  "union": undefined,
  "where": undefined,
}
`;

exports[`SELECT SQL_CALC_FOUND_ROWS * 1`] = `
Object {
  "distinct": false,
  "expressions": Array [
    Object {
      "type": "WildcardExpression",
    },
  ],
  "from": undefined,
  "groupBy": undefined,
  "having": undefined,
  "highPriority": undefined,
  "limit": undefined,
  "orderBy": undefined,
  "sqlBigResult": undefined,
  "sqlBufferResult": undefined,
  "sqlCalcFoundRows": "SQL_CALC_FOUND_ROWS",
  "sqlNoCache": undefined,
  "sqlSmallResult": undefined,
  "straightJoin": undefined,
  "type": "SelectStatement",
  "union": undefined,
  "where": undefined,
}
`;

exports[`SELECT SQL_NO_CACHE * 1`] = `
Object {
  "distinct": false,
  "expressions": Array [
    Object {
      "type": "WildcardExpression",
    },
  ],
  "from": undefined,
  "groupBy": undefined,
  "having": undefined,
  "highPriority": undefined,
  "limit": undefined,
  "orderBy": undefined,
  "sqlBigResult": undefined,
  "sqlBufferResult": undefined,
  "sqlCalcFoundRows": undefined,
  "sqlNoCache": "SQL_NO_CACHE",
  "sqlSmallResult": undefined,
  "straightJoin": undefined,
  "type": "SelectStatement",
  "union": undefined,
  "where": undefined,
}
`;

exports[`SELECT SQL_SMALL_RESULT * 1`] = `
Object {
  "distinct": false,
  "expressions": Array [
    Object {
      "type": "WildcardExpression",
    },
  ],
  "from": undefined,
  "groupBy": undefined,
  "having": undefined,
  "highPriority": undefined,
  "limit": undefined,
  "orderBy": undefined,
  "sqlBigResult": undefined,
  "sqlBufferResult": undefined,
  "sqlCalcFoundRows": undefined,
  "sqlNoCache": undefined,
  "sqlSmallResult": "SQL_SMALL_RESULT",
  "straightJoin": undefined,
  "type": "SelectStatement",
  "union": undefined,
  "where": undefined,
}
`;

exports[`SELECT STRAIGHT_JOIN * 1`] = `
Object {
  "distinct": false,
  "expressions": Array [
    Object {
      "type": "WildcardExpression",
    },
  ],
  "from": undefined,
  "groupBy": undefined,
  "having": undefined,
  "highPriority": undefined,
  "limit": undefined,
  "orderBy": undefined,
  "sqlBigResult": undefined,
  "sqlBufferResult": undefined,
  "sqlCalcFoundRows": undefined,
  "sqlNoCache": undefined,
  "sqlSmallResult": undefined,
  "straightJoin": "STRAIGHT_JOIN",
  "type": "SelectStatement",
  "union": undefined,
  "where": undefined,
}
`;

exports[`SELECT a "aa" 1`] = `
Object {
  "distinct": false,
  "expressions": Array [
    Object {
      "alias": Object {
        "type": "StringLiteral",
        "value": "aa",
      },
      "expression": "a",
      "hasAsKeyword": false,
      "type": "AliasExpression",
    },
  ],
  "from": undefined,
  "groupBy": undefined,
  "having": undefined,
  "highPriority": undefined,
  "limit": undefined,
  "orderBy": undefined,
  "sqlBigResult": undefined,
  "sqlBufferResult": undefined,
  "sqlCalcFoundRows": undefined,
  "sqlNoCache": undefined,
  "sqlSmallResult": undefined,
  "straightJoin": undefined,
  "type": "SelectStatement",
  "union": undefined,
  "where": undefined,
}
`;

exports[`SELECT a + b * c / d 1`] = `
Object {
  "distinct": false,
  "expressions": Array [
    Object {
      "left": Object {
        "left": "a",
        "operator": "+",
        "right": Object {
          "left": "b",
          "operator": "*",
          "right": "c",
        },
      },
      "operator": "/",
      "right": "d",
    },
  ],
  "from": undefined,
  "groupBy": undefined,
  "having": undefined,
  "highPriority": undefined,
  "limit": undefined,
  "orderBy": undefined,
  "sqlBigResult": undefined,
  "sqlBufferResult": undefined,
  "sqlCalcFoundRows": undefined,
  "sqlNoCache": undefined,
  "sqlSmallResult": undefined,
  "straightJoin": undefined,
  "type": "SelectStatement",
  "union": undefined,
  "where": undefined,
}
`;

exports[`SELECT a + b + c 1`] = `
Object {
  "distinct": false,
  "expressions": Array [
    Object {
      "left": Object {
        "left": "a",
        "operator": "+",
        "right": "b",
      },
      "operator": "+",
      "right": "c",
    },
  ],
  "from": undefined,
  "groupBy": undefined,
  "having": undefined,
  "highPriority": undefined,
  "limit": undefined,
  "orderBy": undefined,
  "sqlBigResult": undefined,
  "sqlBufferResult": undefined,
  "sqlCalcFoundRows": undefined,
  "sqlNoCache": undefined,
  "sqlSmallResult": undefined,
  "straightJoin": undefined,
  "type": "SelectStatement",
  "union": undefined,
  "where": undefined,
}
`;

exports[`SELECT a + b - c 1`] = `
Object {
  "distinct": false,
  "expressions": Array [
    Object {
      "left": Object {
        "left": "a",
        "operator": "+",
        "right": "b",
      },
      "operator": "-",
      "right": "c",
    },
  ],
  "from": undefined,
  "groupBy": undefined,
  "having": undefined,
  "highPriority": undefined,
  "limit": undefined,
  "orderBy": undefined,
  "sqlBigResult": undefined,
  "sqlBufferResult": undefined,
  "sqlCalcFoundRows": undefined,
  "sqlNoCache": undefined,
  "sqlSmallResult": undefined,
  "straightJoin": undefined,
  "type": "SelectStatement",
  "union": undefined,
  "where": undefined,
}
`;

exports[`SELECT a + b 1`] = `
Object {
  "distinct": false,
  "expressions": Array [
    Object {
      "left": "a",
      "operator": "+",
      "right": "b",
    },
  ],
  "from": undefined,
  "groupBy": undefined,
  "having": undefined,
  "highPriority": undefined,
  "limit": undefined,
  "orderBy": undefined,
  "sqlBigResult": undefined,
  "sqlBufferResult": undefined,
  "sqlCalcFoundRows": undefined,
  "sqlNoCache": undefined,
  "sqlSmallResult": undefined,
  "straightJoin": undefined,
  "type": "SelectStatement",
  "union": undefined,
  "where": undefined,
}
`;

exports[`SELECT a \`aa\` 1`] = `
Object {
  "distinct": false,
  "expressions": Array [
    Object {
      "alias": Object {
        "type": "BacktickStringLiteral",
        "value": "aa",
      },
      "expression": "a",
      "hasAsKeyword": false,
      "type": "AliasExpression",
    },
  ],
  "from": undefined,
  "groupBy": undefined,
  "having": undefined,
  "highPriority": undefined,
  "limit": undefined,
  "orderBy": undefined,
  "sqlBigResult": undefined,
  "sqlBufferResult": undefined,
  "sqlCalcFoundRows": undefined,
  "sqlNoCache": undefined,
  "sqlSmallResult": undefined,
  "straightJoin": undefined,
  "type": "SelectStatement",
  "union": undefined,
  "where": undefined,
}
`;

exports[`SELECT a FROM b WHERE m = 6; 1`] = `
Object {
  "distinct": false,
  "expressions": Array [
    "a",
  ],
  "from": Object {
    "table": Object {
      "joins": Array [],
      "table": Object {
        "alias": undefined,
        "table": "b",
        "type": "TableFactor",
      },
      "type": "TableReference",
    },
    "type": "FromClause",
  },
  "groupBy": undefined,
  "having": undefined,
  "highPriority": undefined,
  "limit": undefined,
  "orderBy": undefined,
  "sqlBigResult": undefined,
  "sqlBufferResult": undefined,
  "sqlCalcFoundRows": undefined,
  "sqlNoCache": undefined,
  "sqlSmallResult": undefined,
  "straightJoin": undefined,
  "type": "SelectStatement",
  "union": undefined,
  "where": Object {
    "expression": Object {
      "left": "m",
      "operator": "=",
      "right": "6",
    },
    "type": "WhereClause",
  },
}
`;

exports[`SELECT a aa 1`] = `
Object {
  "distinct": false,
  "expressions": Array [
    Object {
      "alias": "aa",
      "expression": "a",
      "hasAsKeyword": false,
      "type": "AliasExpression",
    },
  ],
  "from": undefined,
  "groupBy": undefined,
  "having": undefined,
  "highPriority": undefined,
  "limit": undefined,
  "orderBy": undefined,
  "sqlBigResult": undefined,
  "sqlBufferResult": undefined,
  "sqlCalcFoundRows": undefined,
  "sqlNoCache": undefined,
  "sqlSmallResult": undefined,
  "straightJoin": undefined,
  "type": "SelectStatement",
  "union": undefined,
  "where": undefined,
}
`;

exports[`SELECT a b c d e 1`] = `[SyntaxError: Invalid syntax.]`;

exports[`SELECT a, b, 1`] = `
Object {
  "expressions": Array [
    "a",
    "b",
  ],
  "from": undefined,
  "groupBy": undefined,
  "having": undefined,
  "limit": undefined,
  "orderBy": undefined,
  "type": "SelectStatement",
  "union": undefined,
  "where": undefined,
}
`;

exports[`SELECT a."b" 1`] = `[SyntaxError: Unexpected token.]`;

exports[`SELECT a.* 1`] = `
Object {
  "distinct": false,
  "expressions": Array [
    Object {
      "left": "a",
      "right": Object {
        "type": "WildcardExpression",
      },
      "type": "MemberExpression",
    },
  ],
  "from": undefined,
  "groupBy": undefined,
  "having": undefined,
  "highPriority": undefined,
  "limit": undefined,
  "orderBy": undefined,
  "sqlBigResult": undefined,
  "sqlBufferResult": undefined,
  "sqlCalcFoundRows": undefined,
  "sqlNoCache": undefined,
  "sqlSmallResult": undefined,
  "straightJoin": undefined,
  "type": "SelectStatement",
  "union": undefined,
  "where": undefined,
}
`;

exports[`SELECT a.* FROM foo 1`] = `
Object {
  "distinct": false,
  "expressions": Array [
    Object {
      "left": "a",
      "right": Object {
        "type": "WildcardExpression",
      },
      "type": "MemberExpression",
    },
  ],
  "from": Object {
    "table": Object {
      "joins": Array [],
      "table": Object {
        "alias": undefined,
        "table": "foo",
        "type": "TableFactor",
      },
      "type": "TableReference",
    },
    "type": "FromClause",
  },
  "groupBy": undefined,
  "having": undefined,
  "highPriority": undefined,
  "limit": undefined,
  "orderBy": undefined,
  "sqlBigResult": undefined,
  "sqlBufferResult": undefined,
  "sqlCalcFoundRows": undefined,
  "sqlNoCache": undefined,
  "sqlSmallResult": undefined,
  "straightJoin": undefined,
  "type": "SelectStatement",
  "union": undefined,
  "where": undefined,
}
`;

exports[`SELECT a.b 1`] = `
Object {
  "distinct": false,
  "expressions": Array [
    Object {
      "left": "a",
      "right": "b",
      "type": "MemberExpression",
    },
  ],
  "from": undefined,
  "groupBy": undefined,
  "having": undefined,
  "highPriority": undefined,
  "limit": undefined,
  "orderBy": undefined,
  "sqlBigResult": undefined,
  "sqlBufferResult": undefined,
  "sqlCalcFoundRows": undefined,
  "sqlNoCache": undefined,
  "sqlSmallResult": undefined,
  "straightJoin": undefined,
  "type": "SelectStatement",
  "union": undefined,
  "where": undefined,
}
`;

exports[`SELECT a.b.c 1`] = `
Object {
  "expressions": Array [
    Object {
      "left": Object {
        "left": "a",
        "right": "b",
        "type": "MemberExpression",
      },
      "operator": ".",
      "right": "c",
    },
  ],
  "from": undefined,
  "groupBy": undefined,
  "having": undefined,
  "limit": undefined,
  "orderBy": undefined,
  "type": "SelectStatement",
  "union": undefined,
  "where": undefined,
}
`;

exports[`SELECT a.b.c.d 1`] = `[SyntaxError: Invalid syntax.]`;

exports[`SELECT by FROM foo; 1`] = `[SyntaxError: Invalid syntax.]`;

exports[`SELECT f()() 1`] = `[SyntaxError: Invalid syntax.]`;

exports[`SELECT f().g 1`] = `[SyntaxError: Invalid syntax.]`;

exports[`SELECT f(g(a)) 1`] = `
Object {
  "distinct": false,
  "expressions": Array [
    Object {
      "arguments": Array [
        Object {
          "arguments": Array [
            "a",
          ],
          "callee": "g",
          "type": "CallExpression",
        },
      ],
      "callee": "f",
      "type": "CallExpression",
    },
  ],
  "from": undefined,
  "groupBy": undefined,
  "having": undefined,
  "highPriority": undefined,
  "limit": undefined,
  "orderBy": undefined,
  "sqlBigResult": undefined,
  "sqlBufferResult": undefined,
  "sqlCalcFoundRows": undefined,
  "sqlNoCache": undefined,
  "sqlSmallResult": undefined,
  "straightJoin": undefined,
  "type": "SelectStatement",
  "union": undefined,
  "where": undefined,
}
`;

exports[`SELECT f.g() 1`] = `
Object {
  "distinct": false,
  "expressions": Array [
    Object {
      "arguments": Array [],
      "callee": Object {
        "left": "f",
        "right": "g",
        "type": "MemberExpression",
      },
      "type": "CallExpression",
    },
  ],
  "from": undefined,
  "groupBy": undefined,
  "having": undefined,
  "highPriority": undefined,
  "limit": undefined,
  "orderBy": undefined,
  "sqlBigResult": undefined,
  "sqlBufferResult": undefined,
  "sqlCalcFoundRows": undefined,
  "sqlNoCache": undefined,
  "sqlSmallResult": undefined,
  "straightJoin": undefined,
  "type": "SelectStatement",
  "union": undefined,
  "where": undefined,
}
`;

exports[`SELECT f.g.h() 1`] = `[SyntaxError: Invalid syntax.]`;

exports[`SELECT fn(), fn(a), fn(a, b) 1`] = `
Object {
  "distinct": false,
  "expressions": Array [
    Object {
      "arguments": Array [],
      "callee": "fn",
      "type": "CallExpression",
    },
    Object {
      "arguments": Array [
        "a",
      ],
      "callee": "fn",
      "type": "CallExpression",
    },
    Object {
      "arguments": Array [
        "a",
        "b",
      ],
      "callee": "fn",
      "type": "CallExpression",
    },
  ],
  "from": undefined,
  "groupBy": undefined,
  "having": undefined,
  "highPriority": undefined,
  "limit": undefined,
  "orderBy": undefined,
  "sqlBigResult": undefined,
  "sqlBufferResult": undefined,
  "sqlCalcFoundRows": undefined,
  "sqlNoCache": undefined,
  "sqlSmallResult": undefined,
  "straightJoin": undefined,
  "type": "SelectStatement",
  "union": undefined,
  "where": undefined,
}
`;

exports[`SELECT max () 1`] = `
Object {
  "distinct": false,
  "expressions": Array [
    Object {
      "arguments": Array [],
      "callee": "max",
      "type": "CallExpression",
    },
  ],
  "from": undefined,
  "groupBy": undefined,
  "having": undefined,
  "highPriority": undefined,
  "limit": undefined,
  "orderBy": undefined,
  "sqlBigResult": undefined,
  "sqlBufferResult": undefined,
  "sqlCalcFoundRows": undefined,
  "sqlNoCache": undefined,
  "sqlSmallResult": undefined,
  "straightJoin": undefined,
  "type": "SelectStatement",
  "union": undefined,
  "where": undefined,
}
`;

exports[`SELECT max() 1`] = `
Object {
  "distinct": false,
  "expressions": Array [
    Object {
      "arguments": Array [],
      "callee": "max",
      "type": "CallExpression",
    },
  ],
  "from": undefined,
  "groupBy": undefined,
  "having": undefined,
  "highPriority": undefined,
  "limit": undefined,
  "orderBy": undefined,
  "sqlBigResult": undefined,
  "sqlBufferResult": undefined,
  "sqlCalcFoundRows": undefined,
  "sqlNoCache": undefined,
  "sqlSmallResult": undefined,
  "straightJoin": undefined,
  "type": "SelectStatement",
  "union": undefined,
  "where": undefined,
}
`;

exports[`SELECT not FROM a 1`] = `[SyntaxError: Invalid syntax.]`;

exports[`SELECT null, true, current_timestamp FROM a 1`] = `
Object {
  "distinct": false,
  "expressions": Array [
    "null",
    "true",
    "current_timestamp",
  ],
  "from": Object {
    "table": Object {
      "joins": Array [],
      "table": Object {
        "alias": undefined,
        "table": "a",
        "type": "TableFactor",
      },
      "type": "TableReference",
    },
    "type": "FromClause",
  },
  "groupBy": undefined,
  "having": undefined,
  "highPriority": undefined,
  "limit": undefined,
  "orderBy": undefined,
  "sqlBigResult": undefined,
  "sqlBufferResult": undefined,
  "sqlCalcFoundRows": undefined,
  "sqlNoCache": undefined,
  "sqlSmallResult": undefined,
  "straightJoin": undefined,
  "type": "SelectStatement",
  "union": undefined,
  "where": undefined,
}
`;

exports[`SELECT t as tt 1`] = `
Object {
  "distinct": false,
  "expressions": Array [
    Object {
      "alias": "tt",
      "expression": "t",
      "hasAsKeyword": true,
      "type": "AliasExpression",
    },
  ],
  "from": undefined,
  "groupBy": undefined,
  "having": undefined,
  "highPriority": undefined,
  "limit": undefined,
  "orderBy": undefined,
  "sqlBigResult": undefined,
  "sqlBufferResult": undefined,
  "sqlCalcFoundRows": undefined,
  "sqlNoCache": undefined,
  "sqlSmallResult": undefined,
  "straightJoin": undefined,
  "type": "SelectStatement",
  "union": undefined,
  "where": undefined,
}
`;

exports[`SELECT varchar FROM a 1`] = `[SyntaxError: Invalid syntax.]`;

exports[`SSSSS foo FROM b 1`] = `[SyntaxError: Invalid syntax.]`;

exports[`UPDATE Foo JOIN Goo SET a = 1 1`] = `
Object {
  "ignore": undefined,
  "limit": undefined,
  "lowPriority": undefined,
  "orderBy": undefined,
  "set": Object {
    "expressions": Array [
      Object {
        "left": "a",
        "operator": "=",
        "right": "1",
      },
    ],
    "type": "SetClause",
  },
  "table": Object {
    "joins": Array [
      Object {
        "joinType": "inner",
        "on": undefined,
        "table": Object {
          "alias": undefined,
          "table": "Goo",
          "type": "TableFactor",
        },
        "type": "JoinClause",
      },
    ],
    "table": Object {
      "alias": undefined,
      "table": "Foo",
      "type": "TableFactor",
    },
    "type": "TableReference",
  },
  "type": "UpdateStatement",
  "where": undefined,
}
`;

exports[`UPDATE Foo SET a = 1 LIMIT 1 1`] = `
Object {
  "ignore": undefined,
  "limit": Object {
    "count": "1",
    "offset": undefined,
    "type": "LimitClause",
  },
  "lowPriority": undefined,
  "orderBy": undefined,
  "set": Object {
    "expressions": Array [
      Object {
        "left": "a",
        "operator": "=",
        "right": "1",
      },
    ],
    "type": "SetClause",
  },
  "table": Object {
    "joins": Array [],
    "table": Object {
      "alias": undefined,
      "table": "Foo",
      "type": "TableFactor",
    },
    "type": "TableReference",
  },
  "type": "UpdateStatement",
  "where": undefined,
}
`;

exports[`UPDATE Foo SET a = 1 LIMIT 1, 1 1`] = `[SyntaxError: Invalid syntax.]`;

exports[`UPDATE Foo SET a = 1 WHERE b = 2 ORDER BY c LIMIT 4 1`] = `
Object {
  "ignore": undefined,
  "limit": Object {
    "count": "4",
    "offset": undefined,
    "type": "LimitClause",
  },
  "lowPriority": undefined,
  "orderBy": Object {
    "columnName": "c",
    "type": "OrderByClause",
  },
  "set": Object {
    "expressions": Array [
      Object {
        "left": "a",
        "operator": "=",
        "right": "1",
      },
    ],
    "type": "SetClause",
  },
  "table": Object {
    "joins": Array [],
    "table": Object {
      "alias": undefined,
      "table": "Foo",
      "type": "TableFactor",
    },
    "type": "TableReference",
  },
  "type": "UpdateStatement",
  "where": Object {
    "expression": Object {
      "left": "b",
      "operator": "=",
      "right": "2",
    },
    "type": "WhereClause",
  },
}
`;

exports[`UPDATE Foo SET a = 5 1`] = `
Object {
  "ignore": undefined,
  "limit": undefined,
  "lowPriority": undefined,
  "orderBy": undefined,
  "set": Object {
    "expressions": Array [
      Object {
        "left": "a",
        "operator": "=",
        "right": "5",
      },
    ],
    "type": "SetClause",
  },
  "table": Object {
    "joins": Array [],
    "table": Object {
      "alias": undefined,
      "table": "Foo",
      "type": "TableFactor",
    },
    "type": "TableReference",
  },
  "type": "UpdateStatement",
  "where": undefined,
}
`;

exports[`UPDATE Foo SET a = 5, b = 6 1`] = `
Object {
  "ignore": undefined,
  "limit": undefined,
  "lowPriority": undefined,
  "orderBy": undefined,
  "set": Object {
    "expressions": Array [
      Object {
        "left": "a",
        "operator": "=",
        "right": "5",
      },
      Object {
        "left": "b",
        "operator": "=",
        "right": "6",
      },
    ],
    "type": "SetClause",
  },
  "table": Object {
    "joins": Array [],
    "table": Object {
      "alias": undefined,
      "table": "Foo",
      "type": "TableFactor",
    },
    "type": "TableReference",
  },
  "type": "UpdateStatement",
  "where": undefined,
}
`;

exports[`UPDATE Foo SET a = 6 as b 1`] = `[SyntaxError: Invalid syntax.]`;

exports[`UPDATE Foo SET a = 6 b 1`] = `[SyntaxError: Invalid syntax.]`;

exports[`UPDATE Foo SET f(a) = 5 1`] = `
Object {
  "ignore": undefined,
  "limit": undefined,
  "lowPriority": undefined,
  "orderBy": undefined,
  "set": Object {
    "expressions": Array [
      Object {
        "left": Object {
          "arguments": Array [
            "a",
          ],
          "callee": "f",
          "type": "CallExpression",
        },
        "operator": "=",
        "right": "5",
      },
    ],
    "type": "SetClause",
  },
  "table": Object {
    "joins": Array [],
    "table": Object {
      "alias": undefined,
      "table": "Foo",
      "type": "TableFactor",
    },
    "type": "TableReference",
  },
  "type": "UpdateStatement",
  "where": undefined,
}
`;

exports[`UPDATE Foo, Goo SET a = 1 1`] = `
Object {
  "ignore": undefined,
  "limit": undefined,
  "lowPriority": undefined,
  "orderBy": undefined,
  "set": Object {
    "expressions": Array [
      Object {
        "left": "a",
        "operator": "=",
        "right": "1",
      },
    ],
    "type": "SetClause",
  },
  "table": Object {
    "tables": Array [
      Object {
        "joins": Array [],
        "table": Object {
          "alias": undefined,
          "table": "Foo",
          "type": "TableFactor",
        },
        "type": "TableReference",
      },
      Object {
        "joins": Array [],
        "table": Object {
          "alias": undefined,
          "table": "Goo",
          "type": "TableFactor",
        },
        "type": "TableReference",
      },
    ],
    "type": "TableReferenceList",
  },
  "type": "UpdateStatement",
  "where": undefined,
}
`;

exports[`UPDATE IGNORE Foo SET a = 1 1`] = `
Object {
  "ignore": "IGNORE",
  "limit": undefined,
  "lowPriority": undefined,
  "orderBy": undefined,
  "set": Object {
    "expressions": Array [
      Object {
        "left": "a",
        "operator": "=",
        "right": "1",
      },
    ],
    "type": "SetClause",
  },
  "table": Object {
    "joins": Array [],
    "table": Object {
      "alias": undefined,
      "table": "Foo",
      "type": "TableFactor",
    },
    "type": "TableReference",
  },
  "type": "UpdateStatement",
  "where": undefined,
}
`;

exports[`UPDATE LOW_PRIORITY Foo SET a = 1 1`] = `
Object {
  "ignore": undefined,
  "limit": undefined,
  "lowPriority": "LOW_PRIORITY",
  "orderBy": undefined,
  "set": Object {
    "expressions": Array [
      Object {
        "left": "a",
        "operator": "=",
        "right": "1",
      },
    ],
    "type": "SetClause",
  },
  "table": Object {
    "joins": Array [],
    "table": Object {
      "alias": undefined,
      "table": "Foo",
      "type": "TableFactor",
    },
    "type": "TableReference",
  },
  "type": "UpdateStatement",
  "where": undefined,
}
`;
